# language-c4

./: .gitignore  LICENSE  Makefile  README.md  c4.cabal  group.txt  stack.yaml
app/: Main.hs
assets/test/: incrementFails.c  struct.c  structs-correcting-semicolon.c
assets/test/analysis/: a.out  assignToFunc.negative.c  assignToNumber.negative.c  breakOutsideLoop.negative.c  continueOutsideLoop.negative.c  declWoDeclarator.negative.c  duplicateFct.negative.c  duplicateFctDifferentArgs.negative.c  duplicateFctDifferentReturnType.negative.c  duplicateFctSameArgs.negative.c  duplicateFields.negative.c  duplicateLabel.positive.c  duplicateLabel2.negative.c  duplicateStruct.negative.c  duplicateVarInnerBlock.positive.c  fieldAccess.negative.c  forwardLabels.positive.c  funcDef.positive.c  funcNotDef.negative.c  functionPointer.positive.c  illegalLabels.negative.c  illegalReturn.negative.c  local-var-hides-param.negative.c  local-var-hides-param.positive.c  math.positive.c  ommittedParameterName.negative.c  parameters.negative.c  parameters.positive.c  pointerAccess.negative.c  pointerAccess.positive.c  return.negative.c  rvalue.negative.c  sameNameParamVar.negative.c  simple.positive.c  struct.positive.c  structs-issue-attname.positive.c  structs-no-name-clash.positive.c  typeError.negative.c  var-hides-function.positive.c  var-nested-block.positive.c
assets/test/ast/: abstractDeclarators.in.c  abstractDeclarators.out.c  char.in.c  char.out.c  goto.in.c  ififelseelse.in.c  ififelseelse.out.c  multiAssign.in.c  multiAssign.out.c  parens.out.c  sizeofFctcall.in.c  sizeofFctcall.out.c  sizeofsizeof.c  unaryPostfixArray.in.c  unaryPostfixArray.out.c  unaryPostfixFct.in.c  unaryPostfixFct.out.c  unpretty.in.c
assets/test/codegen/: fac.c  if_multi.c  if_single.c  main.c  max.c  ptr_diff.c  struct.c
sampleProject/: Makefile  function.c  runner.c
src/: Analysis.hs  Ast.hs  CLangDef.hs  Grammar.txt  Lexer.hs  Parser.hs  PrettyPrint.hs  PrettyPrinter.hs  Types.hs
src/Ast/: .#SynAst.hs  SemAst.hs  SynAst.hs
src/Language/: C4.hs
src/Language/C4/: Analysis.hs  Ast.hs  C4.hs  CIO.hs  CLangDef.hs  Codegen.hs  Lexer.hs  Parser.hs  PrettyPrinter.hs  Types.hs
src/Language/C4/Ast/: SemAst.hs  SynAst.hs
test/: Spec.hs  SpecQC.hs
test/Spec/: Analysis.hs  Helper.hs  Lexer.hs  Parser.hs  PrettyPrinter.hs
