name:                c4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://cc.cdl.uni-saarland.de/rfc/c4
author:              Robert Schenck, Felix Stutz, Christian Klinger
maintainer:          cklinger@mpi-inf.mpg.de 
copyright:           All Rights Reserved
category:            Compiler 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lexer, CLangDef
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , bytestring >= 0.10
                     , llvm-hs >= 5.0
                     , llvm-hs-pure >= 5.0
  default-language:    Haskell2010

executable c4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , c4
                     , parsec
  default-language:    Haskell2010

test-suite c4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , c4
                     , hspec
                     , parsec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://cc.cdl.uni-saarland.de/rfc/c4
