name:                c4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://cc.cdl.uni-saarland.de/rfc/c4
author:              Robert Schenck, Felix Stutz, Christian Klinger
maintainer:          cklinger@mpi-inf.mpg.de 
copyright:           All Rights Reserved
category:            Compiler 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lexer
                     , Parser
                     , CLangDef
                     , PrettyPrinter
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , bytestring >= 0.10
                     , bytestring-conversion >= 0.3.1
                     , llvm-hs >= 5.0
                     , llvm-hs-pure >= 5.0
                     , megaparsec >= 6.2.0
                     , QuickCheck >= 2.10.1
  default-language:    Haskell2010

executable c4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , c4
                     , megaparsec >= 6.2.0
                     , bytestring
  default-language:    Haskell2010

test-suite c4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec.Helper
                     , Spec.Lexer
                     , Spec.Parser
                     , Spec.PrettyPrinter
                     , SpecQC
  build-depends:       base
                     , c4
                     , megaparsec >= 6.2.0
                     , hspec
                     , bytestring
                     , bytestring-conversion
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://cc.cdl.uni-saarland.de/rfc/c4
